--- a/src/pages/StylingLink.css
+++ b/src/pages/StylingLink.css
@@ -4,9 +4,11 @@
     position: fixed; /* 페이지에 고정합니다. */
     bottom: 100px; /* 하단에서 20px의 거리를 유지합니다. */
     right: 30px; /* 오른쪽에서 20px의 거리를 유지합니다. */
+    cursor: pointer;
+    z-index: 9999;
   }
-  
-  
+
+
   .Background {
     width: 70px;
     height: 70px;
@@ -16,7 +18,7 @@
     background: #EEE5DC;
     border-radius: 20px;
   }
-  
+
   .Aistyling1 {
     width: 60px;
     height: 60px;
@@ -39,4 +41,3 @@
     line-height: 10px;
     word-wrap: break-word;
   }
-  
