--- a/src/pages/CardDetail.css
+++ b/src/pages/CardDetail.css
@@ -28,6 +28,8 @@
 
 .style-tag {
     margin: 8px;
+    width: auto;
+    white-space: nowrap;
     height: 20px;
     border-radius: 50px;
     background-color: gray;
