--- a/src/pages/RegisterPage.css
+++ b/src/pages/RegisterPage.css
@@ -1,22 +1,32 @@
 .RegisterPage {
-    width:  100%;
-    max-width: 1920px; /* 너비를 최대 1920px로 설정합니다. */
-    margin: 0 auto; /* 가운데 정렬을 위해 좌우 마진을 자동으로 설정합니다. */
-  }
+  width: 100%;
+  max-width: 1920px; /* 너비를 최대 1920px로 설정합니다. */
+  margin: 0 auto; /* 가운데 정렬을 위해 좌우 마진을 자동으로 설정합니다. */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* 설정한 폼의 최대 너비를 1920px로 설정하고, 화면 크기에 맞추어 가운데 정렬합니다. */
 .FormBody {
   max-width: 1920px; /* 최대 너비 설정 */
   width: 100%; /* 너비 100% 설정 */
   margin: 0 auto; /* 가운데 정렬 */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-/* 회원가입 폼의 너비를 최대 1200px로 설정하고, 가운데 정렬합니다. 여백, 테두리, 배경색 등의 스타일을 지정합니다. */
+/* 회원가입 폼의 너비를 최대 1920px로 설정하고, 가운데 정렬합니다. 여백, 테두리, 배경색 등의 스타일을 지정합니다. */
 .RegisterForm {
   width: 100%; /* 너비 100% 설정 */
   max-width: 1200px; /* 최대 너비 설정 */
   margin: 0 auto; /* 가운데 정렬 */
   padding: 20px; /* 내부 여백 설정 */
-  background-color: transparent; /* 배경색을 투명으로 설정 */
+  background-color: transparent; /* 배경색을 투명으로 설정 */ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .FormName {
@@ -127,7 +137,7 @@ input[type="name"] {
 }
 
 input[type="tel"] {
-  width: 65px; /* 너비 100% 설정 */
+  width: 75px; /* 너비 100% 설정 */
   height: 30px;
   padding: 3px; /* 내부 패딩 설정 */
   border: 1px solid rgb(200, 200, 200); /* 테두리 스타일 및 색상 설정 (검정색) */
