--- a/src/pages/Crawler.css
+++ b/src/pages/Crawler.css
@@ -1,42 +1,53 @@
 .CrawlerBody {
-    text-align: center;
-    padding: 20px;
-    max-width: 1920px;
-    width: 100%;
-  }
-  
-  .CrawlerTitle {
-    max-width: 1920px;
-    width: 100%;
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .CrawlerFrame {
-    max-width: 1920px;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 20px;
-  }
-  
-  .ImageContainer {
-    width: 270px;
-    height: 480px;
-    background-color: lightgray;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #ccc;
-  }
-  
-  .CrawlerControls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  text-align: center;
+  padding: 20px;
+  max-width: 1920px;
+  width: 100%;
+  margin-top: 50px; /* 이미지 아래로 내리기 */
+}
 
-  .SelectButton {
+.CrawlerTitle {
+  max-width: 1920px;
+  width: 100%;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.CrawlerFrame {
+  max-width: 1920px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  gap: 20px; /* 이미지 간의 간격 추가 */
+}
+
+.ImageContainer {
+  width: 320px; /* 이미지 크기 조정 */
+  height: 480px; /* 이미지 크기 조정 */
+  background-color: lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ccc;
+  margin: 10px; /* 이미지 간의 간격 추가 */
+  margin-top: 100px;
+}
+
+.ImageContainer img {
+  width: 100%; /* 컨테이너의 너비에 맞게 이미지 크기 조정 */
+  height: auto; /* 이미지 비율을 유지하며 높이 자동 조절 */
+  max-width: 320px; /* 이미지의 최대 너비 설정 */
+  max-height: 500px; /* 이미지의 최대 높이 설정 */
+}
+
+.CrawlerControls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.SelectButton {
   margin: 0 10px;
   padding: 10px 20px;
   font-size: 16px;
@@ -52,15 +63,15 @@
   border-style: solid;
   cursor: pointer;
 }
-  
-  .ArrowButton.left {
-    border-width: 15px 20px 15px 0;
-    border-color: transparent #2196F3 transparent transparent;
-    margin-right: 10px;
-  }
-  
-  .ArrowButton.right {
-    border-width: 15px 0 15px 20px;
-    border-color: transparent transparent transparent #2196F3;
-    margin-left: 10px;
-  }
+
+.ArrowButton.left {
+  border-width: 15px 20px 15px 0;
+  border-color: transparent #2196F3 transparent transparent;
+  margin-right: 10px;
+}
+
+.ArrowButton.right {
+  border-width: 15px 0 15px 20px;
+  border-color: transparent transparent transparent #2196F3;
+  margin-left: 10px;
+}
