--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -1,5 +1,6 @@
 .Footer {
-  width: 1920px;
+  width: 100%;
+  max-width: 1920px;
   height: 240px;
   background: #F5F5F5;
   display: flex;
@@ -16,7 +17,8 @@
 }
 
 .Site, .Customer {
-  width: 430px;
+  width: 100%;
+  max-width: 430px;
   height: 120px;
   position: relative;
   display: flex;
@@ -62,6 +64,7 @@
 }
 
 .Links {
+  width: 330px;
   display: flex;
   flex-direction: row;
   gap: 20px;
