스타일 수정 및 아이디 찾기 페이지 추가

--- a/src/pages/BoardBody.css
+++ b/src/pages/BoardBody.css
@@ -1,7 +1,7 @@
-.Boardbody {
+#Boardbody {
     /* width: 100%; */
-    max-width: 1920px;
     width: 100%;
+    max-width: 1920px;
     margin: 120px 220px;
 }
 /* best-div */
