--- a/src/pages/RegisterPage.css
+++ b/src/pages/RegisterPage.css
@@ -112,15 +112,7 @@ input[type="username"] {
   outline: none; /* 포커스 효과 시 기본 외곽선 제거 */
 }
 
-input[type="registerpassword"] {
-  width: 150px; /* 너비 100% 설정 */
-  height: 30px;
-  padding: 3px; /* 내부 패딩 설정 */
-  border: 1px solid rgb(200, 200, 200); /* 테두리 스타일 및 색상 설정 (검정색) */
-  outline: none; /* 포커스 효과 시 기본 외곽선 제거 */
-}
-
-input[type="passwordcheck"] {
+input[type="password"] {
   width: 150px; /* 너비 100% 설정 */
   height: 30px;
   padding: 3px; /* 내부 패딩 설정 */
@@ -269,4 +261,89 @@ input[type="email"] {
     background-color: #b1b1b1;
     color: black;
   }
+}
+
+
+/* 이메일 인증 관련 css */
+/* 기본 스타일 */
+.emailCheckBtn {
+  margin-left: 10px;
+  padding: 6px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.emailCheckBtn:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.emailCheckBtn:hover:enabled {
+  background-color: #0056b3;
+}
+
+.timerContainer {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.timerText {
+  font-size: 14px;
+  color: #333;
+}
+
+.codeInput {
+  width: 200px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.codeCheckBtn {
+  padding: 8px 16px;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.codeCheckBtn:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.codeCheckBtn:hover:enabled {
+  background-color: #218838;
+}
+
+.codeCheckImage {
+  width: 20px;
+  height: 20px;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.signUpHeader {
+  margin-top: 20px;
+}
+
+.signUpModalText {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 10px;
 }
